--- a/src/App.css
+++ b/src/App.css
@@ -13,12 +13,12 @@
 }
 
 .inputs {
-    padding: 1em;
+    padding: 1em 1em 0 1em;
 }
 
 .content {
     overflow: auto;
-    padding: 1em;
+    padding: 0 1em 1em 1em;
 }
 
 .footer {
